# lan-party-stats

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.py  web_main.py
src/bot/: __init__.py  bot.py  commands.py  database.py  stats.py  tracker.py
src/web/: __init__.py  server.py
static/css/: style.css
static/js/: app.js  game-icons.js
templates/: 404.html  base.html  games.html  index.html  leaderboard.html  player.html  spotify.html
templates/partials/: leaderboard_table.html  overview_stats.html
